ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: chat-ingress
  namespace: deafult
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/affinity: "cookie"
    ingress.kubernetes.io/session-cookie-name: "route"
    ingress.kubernetes.io/session-cookie-hash: "sha1"
spec:
  rules:
  - host: dmitri.coc09.mms-support.de
    http:
      paths:
        - path: /chat
          backend:
            serviceName: chat-service
            servicePort: 8080
